--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -40,6 +40,31 @@
     });
   }
 
+  function tomcat_app(elem, tomcat_service_id, action, app) {
+    var btn = '#' + elem.id + ' > i';
+    if ($(btn).hasClass('processing')) {
+      console.log('stop clicking on the ' + action + ' button!!!!');
+      return false;
+    }
+
+    // change the icon to the spinner and make the ajax call
+    $(btn).removeClass();
+    $(btn).addClass('fa fa-cog fa-spin fa-fw');
+
+    //find all buttons in the div to add the prisme_processing class to so that the user cannot, for example, start and undeploy the app at the same time
+    var clean_id = 'div#' + tomcat_service_id.toString() + '-' + app.split('.').join('_') + ', i';
+    $(clean_id).addClass('processing');
+
+    $.ajax({
+      url: gon.routes.welcome_tomcat_app_action_path,
+      type: 'GET',
+      data: {tomcat_service_id: tomcat_service_id, tomcat_action: action, tomcat_app: app},
+      success: function (data) {
+        $("#tp-deployments").html(data);
+      }
+    });
+  }
+
   $(document).ready(function () {
     $("#tabs").tabs();
     <% if session[:select_tabpage] %>
