--- a/config/service/jenkins_job_config.xml.erb
+++ b/config/service/jenkins_job_config.xml.erb
@@ -68,8 +68,7 @@
   </rootModule>
   <rootPOM><%#= root_pom %></rootPOM>
   -->
-  <goals>clean deploy -DaltDeploymentRepository=vadev::default::http://vadev.mantech.com:8081/nexus/content/repositories/termdatasnapshots</goals>
-  <aggregatorStyleBuild>true</aggregatorStyleBuild>
+  <goals>clean deploy -DaltDeploymentRepository=vadev::default::<%=nexus_publication_url%></goals>  <aggregatorStyleBuild>true</aggregatorStyleBuild>
   <incrementalBuild>false</incrementalBuild>
   <ignoreUpstremChanges>false</ignoreUpstremChanges>
   <archivingDisabled>false</archivingDisabled>
