ignoreUpstremChanges to true.

--- a/config/service/jenkins_job_config.xml.erb
+++ b/config/service/jenkins_job_config.xml.erb
@@ -70,7 +70,7 @@
   -->
   <goals>clean deploy -DaltDeploymentRepository=vadev::default::<%=nexus_publication_url%></goals>  <aggregatorStyleBuild>true</aggregatorStyleBuild>
   <incrementalBuild>false</incrementalBuild>
-  <ignoreUpstremChanges>false</ignoreUpstremChanges>
+  <ignoreUpstremChanges>true</ignoreUpstremChanges>
   <archivingDisabled>false</archivingDisabled>
   <siteArchivingDisabled>false</siteArchivingDisabled>
   <fingerprintingDisabled>false</fingerprintingDisabled>
