--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -4,15 +4,15 @@
 <table class="prisme-table table-striped table-hover" id="user_edit_list_table">
   <thead>
   <tr>
-    <th width="30%">E-Mail Address</th>
+    <th width="30%">User E-Mail/SSOI Login</th>
     <th width="45%">Assigned Roles</th>
     <th width="25%">Actions</th>
   </tr>
   </thead>
   <tbody>
   <% @user_list.each do |user| %>
-      <tr valign="top" id="user_row_<%= user.id %>">
-        <td id="email_text_<%= user.id %>"><%= h user.email %></td>
+      <tr valign="top" id="user_row_<%= user.user_row_id %>">
+        <td id="user_name_td_<%= user.user_row_id %>"><%= h user.user_name %></td>
         <%
           user_roles = []
           role_text = ''
@@ -23,11 +23,11 @@
         %>
         <td style="text-align: left"><%= raw role_text.empty? ? 'No Roles Assigned' : role_text.chop.chop %></td>
         <td style="text-align: left">
-          <a data-toggle="modal" data-target="#editModal" class="btn btn-primary" role="button" onclick='edit_user_roles(<%=user.id%>, <%= raw JSON.parse(user_roles.to_json) %>);'>
+          <a data-toggle="modal" data-target="#editModal" class="btn btn-primary" role="button" onclick='edit_user_roles("<%=user.user_row_id%>", <%= raw JSON.parse(user_roles.to_json) %>);'>
             <i class="fa fa-edit fa-fw" aria-hidden="true"></i>&nbsp;Edit User Roles</a>
           <!-- user cannot delete themselves -->
-          <% unless (current_user.email.eql?(user.email)) %>
-              <a class="btn btn-danger" role="button" onclick="delete_user(<%=user.id%>, '<%= user.email %>');">
+          <% unless (prisme_user == user) %>
+              <a class="btn btn-danger" role="button" onclick="delete_user('<%=user.user_row_id%>', '<%= user.user_name %>');">
                 <i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;Delete User</a>
           <% end %>
         </td>
@@ -44,11 +44,11 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn_submit_form">Update User Roles</button>
-        <h5 style="padding-top: 5px">User E-Mail:&nbsp;<strong><span id="user_email"></span></strong></h5>
+        <h5 style="padding-top: 5px">User E-Mail/SSOI Login:&nbsp;<strong><span id="edit_user_info_span"></span></strong></h5>
       </div>
       <div class="modal-body" style="overflow:auto; max-height: 70vh;"><!-- style is for scrollable div -->
         <%= form_tag(admin_user_edit_update_user_roles_path, id: 'user_edit_form') do %>
-            <input type="hidden" name="user_id" id="user_id"/>
+            <input type="hidden" name="user_id_to_edit" id="user_id_to_edit"/>
             <table class="prisme-table table-striped">
               <tbody>
               <tr>
@@ -158,8 +158,8 @@
 <script>
   function edit_user_roles(edit_user_id, edit_user_current_roles) {
     // update the modal div with the user's current roles for form submission
-    $('#user_id').val(edit_user_id);
-    $('span#user_email').text($('td#email_text_' + edit_user_id).text());
+    $('#user_id_to_edit').val(edit_user_id);
+    $('span#edit_user_info_span').text($('td#user_name_td_' + edit_user_id).text());
 
     // uncheck all of the checkboxes
     $("input:checkbox").prop('checked', false);
@@ -170,14 +170,14 @@
     });
   }
 
-  function delete_user(user_id, email) {
+  function delete_user(user_id, user_name) {
     bootbox.confirm({
       size: 'small',
       title: 'Question?',
-      message: 'Are you sure you want delete <strong>' + email + '</strong>?',
+      message: 'Are you sure you want delete <strong>' + user_name + '</strong>?',
       callback: function (result) {
         if (result) {
-          $.getJSON(gon.routes.delete_user_path.replace(':id', user_id.toString()), {}, function (data) {
+          $.getJSON(gon.routes.delete_user_path, {user_row_id: user_id}, function (data) {
             if (data.remove_row === true) {
               $('table#user_edit_list_table tr#user_row_' + user_id).remove();
             }
@@ -190,12 +190,20 @@
 
   function check_admin_click(elem) {
     var ret = true;
-    var current_user_id = Number(<%= current_user.id %>);
-    var edit_user_id = Number($('#user_id').val());
-    var is_super_user = <%= current_user.has_role? Roles::SUPER_USER %>;
+    var user_id_info = $('#user_id_to_edit').val();
+    var user_id_arr = user_id_info.split('_');
+    var edit_user_id = Number(user_id_arr[0]);
+    var ssoi_user = user_id_arr[1];
+    var current_user_id = Number(<%= prisme_user.id %>);
+    var is_super_user = <%= prisme_user.has_role? Roles::SUPER_USER %>;
+    var edit_user_is_current_user = false;
+
+    if (edit_user_id === current_user_id && ssoi_user === '<%= prisme_user.is_a?(SsoiUser).to_s %>') {
+      edit_user_is_current_user = true;
+    }
 
     if (elem.name === 'cbx_super_user') {
-      if (current_user_id === edit_user_id) {
+      if (edit_user_is_current_user) {
         if (is_super_user) {
           bootbox.alert({
             size: 'small',
@@ -223,7 +231,7 @@
       }
     }
     else {
-      if (current_user_id === edit_user_id && !is_super_user) {
+      if (edit_user_is_current_user && !is_super_user) {
         bootbox.alert({
           size: 'small',
           title: 'Warning',
