--- a/config/service/jenkins_job_config.xml.erb
+++ b/config/service/jenkins_job_config.xml.erb
@@ -68,7 +68,8 @@
   </rootModule>
   <rootPOM><%#= root_pom %></rootPOM>
   -->
-  <goals>clean deploy -DaltDeploymentRepository=vadev::default::<%=nexus_publication_url%></goals>  <aggregatorStyleBuild>true</aggregatorStyleBuild>
+  <goals>clean deploy -DaltDeploymentRepository=vadev::default::<%=nexus_publication_url%></goals>
+  <aggregatorStyleBuild>true</aggregatorStyleBuild>
   <incrementalBuild>false</incrementalBuild>
   <ignoreUpstremChanges>true</ignoreUpstremChanges>
   <archivingDisabled>false</archivingDisabled>
