--- a/app/views/terminology_db_builder/index.html.erb
+++ b/app/views/terminology_db_builder/index.html.erb
@@ -1,6 +1,6 @@
 <style>
   .modal-wide .modal-dialog {
-    width: 50%;
+    width: 30%;
   }
 </style>
 
@@ -11,27 +11,27 @@
 </div>
 
 <%= render 'layouts/filter_table_poll_results', filter_id: 'dbb_filter_rows', filter_label: 'Filter Results', include_all_rows: true, poll: 'poll' %>
-<table id="data-table" class="prisme-table table-striped table-hover">
-  <thead>
-  <tr>
-    <th>Job Name</th>
-    <th>User Name</th>
-    <th>Started At</th>
-    <th>Completed At</th>
-    <th>State</th>
-    <th>IBDF Files</th>
-    <th>Result</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-  </tr>
-  <tr>
-    <td colspan="7" style="text-align:center">There are no items to list...</td>
-  </tr>
-  </tbody>
-</table>
-<br/>
+
+<%
+  locals = {}
+  fields = {}
+  fields['job_name'] = 'Job Name'
+  fields['started_at'] = 'Started At'
+  fields['user'] = 'User Name'
+  fields['ibdf_files'] = 'IBDF Files Included'
+  fields['leaf_data.jenkins_job_name'] = 'Jenkins Build Name'
+  fields['leaf_data.jenkins_attempt_number'] = 'Attempts'
+  fields['leaf_data.jenkins_build_result'] = 'Build Result'
+  fields['leaf_data.completed_at'] = 'Last Check /<br>Completed At'
+  fields['leaf_data.elapsed_time'] = 'Elapsed Time'
+  fields['leaf_data.jenkins_job_deleted'] = 'Jenkins Job<br>Deleted?'
+  locals['fields'] = fields
+  locals['poll_key'] = 'polling.pollEnum.DB_BUILDER'
+  locals['poll_route'] = 'gon.routes.terminology_db_builder_load_build_data_path'
+  locals['check_poll_route'] = 'gon.routes.terminology_db_builder_check_polling_path'
+%>
+
+<%= render 'jenkins_check_build/job_data_table', locals: locals %>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade modal-wide" role="dialog">
@@ -153,74 +153,7 @@
       });
     }
 
-    var fields = ['job_name', 'user', 'started_at', 'completed_at', 'status', 'ibdf_files', 'result'];
-
-    function loadTable(tableId, data) {
-      $('#' + tableId).find('tbody').empty();
-
-      if (data.length > 0) {
-        $.each(data, function (index, row) {
-          var tr_data = $('<tr>');
-
-          for (var f = 0; f < fields.length; f++) {
-            var field = fields[f];
-
-            if (field === 'started_at') {
-              tr_data.append($('<td>').text(format_epoch_in_local(row.started_at)));
-            }
-            else if (field === 'completed_at') {
-              tr_data.append($('<td>').text(format_epoch_in_local(row.completed_at)));
-            }
-            else if (field === 'status') {
-              tr_data.append($('<td>').text(gon.job_status_constants[row.status]));
-            }
-            else if (field === 'ibdf_files') {
-              tr_data.append($('<td>').html(row.ibdf_files));
-            }
-            else {
-              tr_data.append($('<td>').text(eval('row.' + field)));
-            }
-          }
-          $('#' + tableId + ' tbody').append(tr_data);
-        });
-      }
-      else {
-        var rows = '<tr><td colspan="' + fields.length + '" style="text-align:center">There are no items to list...</td></tr>';
-        $('#' + tableId + ' tbody').html(rows);
-      }
-    }
-
-    function poll() {
-      console.log('calling poll - dbb');
-      var row_limit = arguments[0];
-
-      if (row_limit === undefined) {
-        row_limit = $('#dbb_filter_rows').find('option:selected').val();
-      }
-
-      $.getJSON(gon.routes.terminology_db_builder_load_build_data_url, {row_limit: row_limit}, function (data) {
-        loadTable('data-table', data);
-
-        <% if Rails.env.development? %>
-        if (polling.isPolling(polling.pollEnum.DB_BUILDER)) {
-          $.getJSON(gon.routes.terminology_db_builder_check_polling_path, {}, function (data) {
-            console.log(JSON.stringify(data));
-            if (data.poll === false) {
-              polling.unregisterPolling(polling.pollEnum.DB_BUILDER);
-
-              //call final poll in case there is a timing issue
-              poll();
-            }
-          });
-        }
-        <% end %>
-      });
-    }
-
     $(document).ready(function () {
-      //register for polling
-      polling.registerPolling(polling.pollEnum.DB_BUILDER, poll, 5000);
-
       // call init_select2 to initialize all select inputs to use the select2 js library
       init_select2();
 
@@ -230,8 +163,7 @@
           var lbl = $("label[for='" + element.attr('id') + "']");
           error.addClass('arrow_box');
           error.insertAfter(lbl);
-        }//,
-        //wrapper: 'span'
+        }
       });
     });
   </script>
