--- a/app/views/jenkins_check_build/_job_data_table.html.erb
+++ b/app/views/jenkins_check_build/_job_data_table.html.erb
@@ -110,7 +110,7 @@
     var row_limit = arguments[0];
 
     if (row_limit === undefined) {
-      row_limit = $('#tc_filter_rows').find('option:selected').val();
+      row_limit = $('#filter_rows').find('option:selected').val();
     }
 
     $.getJSON(<%= locals['poll_route'] %>, {row_limit: row_limit}, function (data) {
