--- a/app/views/terminology_converter/index.html.erb
+++ b/app/views/terminology_converter/index.html.erb
@@ -6,27 +6,25 @@
 </div>
 <%= render 'layouts/filter_table_poll_results', filter_id: 'tc_filter_rows', filter_label: 'Filter Results', include_all_rows: true, poll: 'poll' %>
 
-<table id="data-table" class="prisme-table table-striped table-hover">
-  <thead>
-  <tr>
-    <th>Job Name</th>
-    <th>Started At</th>
-    <th>User Name</th>
-    <th>Jenkins Build Name</th>
-    <th>Attempts</th>
-    <th>Build Result</th>
-    <th>Last Check<br>Completed At</th>
-    <th>Elapsed Time</th>
-    <th>Jenkins Job<br>Deleted?</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td colspan="9" style="text-align:center">There are no items to list...</td>
-  </tr>
-  </tbody>
-</table>
-<br/>
+<%
+  locals = {}
+  fields = {}
+  fields['job_name'] = 'Job Name'
+  fields['started_at'] = 'Started At'
+  fields['user'] = 'User Name'
+  fields['leaf_data.jenkins_job_name'] = 'Jenkins Build Name KMA'
+  fields['leaf_data.jenkins_attempt_number'] = 'Attempts'
+  fields['leaf_data.jenkins_build_result'] = 'Build Result'
+  fields['leaf_data.completed_at'] = 'Last Check /<br>Completed At'
+  fields['leaf_data.elapsed_time'] = 'Elapsed Time'
+  fields['leaf_data.jenkins_job_deleted'] = 'Jenkins Job<br>Deleted?'
+  locals['fields'] = fields
+  locals['poll_key'] = 'polling.pollEnum.CONVERTER'
+  locals['poll_route'] = 'gon.routes.terminology_converter_load_build_data_path'
+  locals['check_poll_route'] = 'gon.routes.terminology_converter_check_polling_path'
+%>
+
+<%= render 'jenkins_check_build/job_data_table', locals: locals %>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
@@ -98,115 +96,7 @@
     $('#term_source_actions_div').hide();
   }
 
-  function build_status_renderer(params) {
-    var ret = "\<span style=\"color: COLOR\"\>IMG" + params + "\<\/span\>";
-    var img = '';
-    var color = 'black';
-
-    switch (params) {
-      case '<%= JenkinsCheckBuild::BuildResult::INQUEUE %>':
-      case '<%= JenkinsCheckBuild::BuildResult::IN_PROCESS %>':
-      case '<%= JenkinsCheckBuild::BuildResult::REBUILDING %>':
-      case '<%= JenkinsCheckBuild::BuildResult::BUILDING %>':
-      default:
-        img = "\<img src=\"ajax-loader.gif\"\/>";
-        break;
-      case '<%= JenkinsCheckBuild::BuildResult::SUCCESS %>':
-        color = 'green';
-        break;
-      case '<%= JenkinsCheckBuild::BuildResult::SERVER_ERROR %>':
-      case '<%= JenkinsCheckBuild::BuildResult::FAILURE %>':
-      case '<%= JenkinsCheckBuild::BuildResult::ABORTED %>':
-      case '<%= JenkinsCheckBuild::BuildResult::UNKNOWN %>':
-      case '<%= JenkinsCheckBuild::BuildResult::UNSTABLE %>':
-        color = "red";
-        break;
-    }
-
-    ret = ret.replace("COLOR", color);
-    ret = ret.replace("IMG", img);
-    var span = $('<span>').css('color', color);
-    if (img !== '') {
-      img = $('<i>').addClass("fa fa-cog fa-spin fa-fw");
-      span.html(img).append(params);
-    } else {
-      span.text(params);
-    }
-
-    return span;
-  }
-
-  /*
-   {"job_id":"4c0a2d3c-255d-429e-9dfb-68739d8d9f11","job_name":"JenkinsStartBuild","status":4,"queue":"default","scheduled_at":"2016-04-27T20:59:49.841Z",
-   "enqueued_at":"2016-04-27T20:59:49.902Z","started_at":"2016-04-27T20:59:49.911Z","completed_at":"2016-04-27T20:59:51.312Z","last_error":null,
-   "result":"Jenkins server created.Jenkins job PRISME_ISAAC-term-convert-loinc_2016_04_27T16_59_49 created.Jenkins build started.","user":null,
-   "parent_job_id":null,"root_job_id":null,"leaf":false,"json_data":"null","created_at":"2016-04-27T20:59:49.851Z","updated_at":"2016-04-27T21:00:21.795Z",
-   "leaf_data":{"jenkins_check_job_id":"7d0826f8-6c55-46a3-8c0e-36b1a8456ced","jenkins_job_name":"PRISME_ISAAC-term-convert-loinc_2016_04_27T16_59_49",
-   "jenkins_attempt_number":1,"jenkins_build_result":"SUCCESS","jenkins_job_deleted":"yes"}}
-   */
-  var fields = ['job_name', 'started_at', 'user', 'leaf_data.jenkins_job_name', 'leaf_data.jenkins_attempt_number', 'leaf_data.jenkins_build_result', 'leaf_data.completed_at', 'leaf_data.elapsed_time', 'leaf_data.jenkins_job_deleted'];
-
-  function loadTable(tableId, data) {
-    $('#' + tableId + ' tbody').empty();
-
-    if (data.length > 0) {
-      $.each(data, function (index, row) {
-        var tr_data = $('<tr>');
-
-        $.each(fields, function (index, field) {
-          if (field === 'started_at') {
-            tr_data.append($('<td>').text(format_epoch_in_local(row.started_at)));
-          }
-          else if (field === 'leaf_data.jenkins_build_result') {
-            tr_data.append($('<td>').html(build_status_renderer(row.leaf_data.jenkins_build_result)));
-          }
-          else if (field === 'leaf_data.completed_at') {
-            tr_data.append($('<td>').text(format_epoch_in_local(row.leaf_data.completed_at)));
-          }
-          else {
-            tr_data.append($('<td>').text(eval('row.' + field)));
-          }
-        });
-        $('#' + tableId + ' tbody').append(tr_data);
-      });
-    }
-    else {
-      var rows = '<tr><td colspan="' + fields.length + '" style="text-align:center">There are no items to list...</td></tr>';
-      $('#' + tableId + ' tbody').html(rows);
-    }
-  }
-
-  function poll() {
-    console.log('calling poll - tc');
-    var row_limit = arguments[0];
-
-    if (row_limit === undefined) {
-      row_limit = $('#tc_filter_rows').find('option:selected').val();
-    }
-
-    $.getJSON(gon.routes.terminology_converter_load_build_data_path, {row_limit: row_limit}, function (data) {
-      loadTable('data-table', data);
-
-      <% if Rails.env.development? %>
-      if (polling.isPolling(polling.pollEnum.CONVERTER)) {
-        $.getJSON(gon.routes.terminology_converter_check_polling_path, {}, function (data) {
-          console.log(JSON.stringify(data));
-          if (data.poll === false) {
-            polling.unregisterPolling(polling.pollEnum.CONVERTER);
-
-            //call final poll in case there is a timing issue
-            poll();
-          }
-        });
-      }
-      <% end %>
-    });
-  }
-
   $(document).ready(function () {
-    //register for polling
-    polling.registerPolling(polling.pollEnum.CONVERTER, poll, 5000);
-
     // call init_select2 to initialize all select inputs to use the select2 js library
     init_select2();
 
@@ -216,8 +106,7 @@
         var lbl = $("label[for='" + element.attr('id') + "']");
         error.addClass('arrow_box');
         error.insertAfter(lbl);
-      }//,
-      //wrapper: 'span'
+      }
     });
   });
 </script>
