fixed defect 367638 - referencing class_name method that was being injected by yard. Needed to change to to_s.

--- a/app/views/terminology_converter/index.html.erb
+++ b/app/views/terminology_converter/index.html.erb
@@ -12,7 +12,7 @@
   fields['job_name'] = 'Job Name'
   fields['started_at'] = 'Started At'
   fields['user'] = 'User Name'
-  fields['leaf_data.jenkins_job_name'] = 'Jenkins Build Name KMA'
+  fields['leaf_data.jenkins_job_name'] = 'Jenkins Build Name'
   fields['leaf_data.jenkins_attempt_number'] = 'Attempts'
   fields['leaf_data.jenkins_build_result'] = 'Build Result'
   fields['leaf_data.completed_at'] = 'Last Check /<br>Completed At'
