--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-// input div is used to size the div surrounding each input ont eh modal windows
+// input div is used to size the div surrounding each input on the modal windows
 .input_div {
   width: 525px;
 }
@@ -38,6 +38,8 @@ fieldset.classic-border {
   margin: 0 0 1.5em 0 !important;
   -webkit-box-shadow: 0px 0px 0px 0px #000;
   box-shadow: 0px 0px 0px 0px #000;
+  background-color: cornsilk;
+  border-radius: 8px;
 }
 
 legend.classic-border {
@@ -45,8 +47,12 @@ legend.classic-border {
   font-weight: bold !important;
   text-align: left !important;
   width: auto;
-  padding: 0 10px;
+  padding: 0 20px;
   border-bottom: none;
+  background-color: navy;
+  color: white;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 // used with jquery validation - specifically with select2 dropdowns and jq validate
