--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -35,7 +35,9 @@
         <% if prisme_user.nil? %>
             <a href="<%= new_user_session_path %>" onclick="polling.checkPolling(polling.pollEnum.LOGIN);">Log in</a>
         <% else %>
-            <% unless prisme_user.is_a?(SsoiUser) %>
+            <% if prisme_user.is_a?(SsoiUser) %>
+                <a href="<%= roles_sso_logout_path %>" onclick="polling.checkPolling(polling.pollEnum.LOGOUT);">SSO Log out</a>
+            <% else %>
               <a href="<%= destroy_user_session_path %>" onclick="polling.checkPolling(polling.pollEnum.LOGOUT);">Log out</a>
             <% end %>
         <% end %>
