added app_deployer style; added text-italic and underline styles; refactored to use bootstrap style; added manager role to GUI; added can_add_comments composite method;

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -139,3 +139,11 @@ html, body {
 .table-hover > tbody > tr:hover {
   background-color: #dde7f5;
 }
+
+.text-italic {
+  font-style: italic;
+}
+
+.text-underline {
+  text-decoration: underline;
+}
