--- a/app/views/jenkins_check_build/_job_data_table.html.erb
+++ b/app/views/jenkins_check_build/_job_data_table.html.erb
@@ -8,7 +8,7 @@
   </thead>
   <tbody>
   <tr>
-    <td colspan="<%= locals['fields'].keys.length.to_s %>" style="text-align:center">There are no items to list...</td>
+    <td colspan="<%= locals['fields'].keys.length.to_s %>" class="text-center">There are no items to list...</td>
   </tr>
   </tbody>
 </table>
