updated text styles

--- a/app/views/jenkins_check_build/_job_data_table.html.erb
+++ b/app/views/jenkins_check_build/_job_data_table.html.erb
@@ -100,7 +100,7 @@
       });
     }
     else {
-      var rows = '<tr><td colspan="<%= locals['fields'].keys.length.to_s %>" style="text-align:center">There are no items to list...</td></tr>';
+      var rows = '<tr><td colspan="<%= locals['fields'].keys.length.to_s %>" class="text-center">There are no items to list...</td></tr>';
       $('#' + tableId + ' tbody').html(rows);
     }
   }
