--- a/app/views/utilities/warmup.html.erb
+++ b/app/views/utilities/warmup.html.erb
@@ -3,7 +3,7 @@
   <thead>
    <tr>
        <th width="10%">Header Key</th>
-       <th width="90%" style="text-align: left">Header Value</th>
+       <th width="90%" class="text-left">Header Value</th>
      </tr>
    </thead>
    <tbody>
