--- a/app/views/welcome/_job_queue.html.erb
+++ b/app/views/welcome/_job_queue.html.erb
@@ -15,7 +15,7 @@
   </thead>
   <tbody>
   <tr>
-    <td colspan="8" style="text-align:center">There are no items to list...</td>
+    <td colspan="8" class="text-center">There are no items to list...</td>
   </tr>
   </tbody>
 </table>
