Start of roles API in prisme

--- a/app/views/roles/get_roles.html.erb
+++ b/app/views/roles/get_roles.html.erb
@@ -4,3 +4,5 @@
   <li><%=role.name%></li>
 <%end%>
 <p> The user was authenticated = <%=@authenticated.to_s %></p>
+<br><p>The token is -- </p>
+<%=@roles_hash[:token] %>
