misspelling and fixed jenkins configuration seed

--- a/app/views/terminology_db_builder/index.html.erb
+++ b/app/views/terminology_db_builder/index.html.erb
@@ -137,7 +137,7 @@
         bootbox.alert({
           size: 'medium',
           title: 'Database Name Error',
-          message: "The computed Databse Name is not unique.<br><br>Please change either the database name or database version to ensure uniqueness.",
+          message: "The computed Database Name is not unique.<br><br>Please change either the database name or database version to ensure uniqueness.",
           callback: function () {
             // reset the submit button
             $btnSubmit.attr('onclick', 'submitPackage();').text('Create Database');
