--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -45,6 +45,7 @@
     </ul>
     <div style="float:right; padding-top: 15px; padding-right: 15px">
       <%= raw (prisme_user.nil? ? '' : "<Strong>Current User:</strong>&nbsp;#{prisme_user.user_name}") %>
+      <br>version: <%= PRISME_VERSION %>
     </div>
   </div>
 </nav>
