moved version information to the footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,5 +37,8 @@ Copyright Notice
     </div>
   </div>
 </main>
+<footer class="prisme-footer">
+  <%= render 'layouts/footer'%>
+</footer>
 </body>
 </html>
