added db converter validations; modified app deployer isaac rest drop down loading to look at lucene.zip files and check for cradle.zip file existance due to nexus publishing issue;

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,10 @@
   width: 525px;
 }
 
+.input_525 {
+  width: 525px;
+}
+
 // styles for a classic fieldset look
 fieldset.classic-border {
   border: 1px groove #ddd !important;
