--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -164,3 +164,31 @@ html, body {
 .text-underline {
   text-decoration: underline;
 }
+
+/* tooltip styling*/
+ .prismetooltip {
+   position: relative;
+   display: inline-block;
+   border-bottom: 1px dotted black;
+ }
+
+.prismetooltip .tooltiptext {
+  visibility: hidden;
+  width: 350px;
+  background-color: #8CCCF1;
+  color: black;
+  text-align: left;
+  border-radius: 6px;
+  padding: 5px 0;
+  overflow:scroll; height:400px;
+  border-radius: 3px;
+  padding: 5px;
+  box-shadow: 10px 10px 5px #888888 ;
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.prismetooltip:hover .tooltiptext {
+  visibility: visible;
+}
